# odatacpp-server

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
include/odata/common/: asyncrt_utils.h  base_uri.h  basic_types.h  json.h  nullable.h  platform.h  uri.h  uri_builder.h  uri_parser.h  utility.h  xmlhelpers.h  xmlstream.h  xxpublic.h
include/odata/common/compat/: SafeInt3.hpp
include/odata/core/: odata_batch_part_value.h  odata_batch_value.h  odata_collection_value.h  odata_context_url_builder.h  odata_context_url_parser.h  odata_core.h  odata_entity_factory.h  odata_entity_model_builder.h  odata_entity_reference.h  odata_entity_reference_collection.h  odata_entity_value.h  odata_enum_value.h  odata_error.h  odata_exception.h  odata_filter_clause.h  odata_format.h  odata_json_operation_payload_parameter_writer.h  odata_json_operation_url_parameter_writer.h  odata_json_reader_full.h  odata_json_reader_minimal.h  odata_json_writer.h  odata_message_reader.h  odata_message_writer.h  odata_message_writer_settings.h  odata_metadata_builder.h  odata_operation.h  odata_orderby_clause.h  odata_parameter.h  odata_path.h  odata_path_segment.h  odata_path_segment_visitor.h  odata_primitive_value.h  odata_property_map.h  odata_query_node.h  odata_query_node_visitor.h  odata_search_clause.h  odata_select_expand_clause.h  odata_service_document.h  odata_service_document_element.h  odata_structured_value.h  (+3 more)
include/odata/edm/: edm_entity_container.h  edm_entity_set.h  edm_model.h  edm_model_reader.h  edm_model_utility.h  edm_model_writer.h  edm_navigation_source.h  edm_operation_import.h  edm_schema.h  edm_singleton.h  edm_type.h  odata_edm.h
msvc/vs11/: Common.vs11.props  TestRunner.vs11.vcxproj  UnitTestpp.vs11.vcxproj  dirs.proj  odata_functional_test.vs11.vcxproj  odata_functional_test.vs11.vcxproj.filters  odata_library.vs11.vcxproj  odatacpp.sln  utilities.vs11.vcxproj
msvc/vs11/test_only/: odata_e2e_service.vs11.vcxproj  odata_service.vs11.vcxproj
msvc/vs12/: Common.vs12.props  TestRunner.vs12.vcxproj  UnitTestpp.vs12.vcxproj  dirs.proj  odata_functional_test.vs12.vcxproj  odata_library.vs12.vcxproj  odata_library.vs12.vcxproj.filters  odatacpp.sln  utilities.vs12.vcxproj
msvc/vs12/test_only/: odata_e2e_service.vs12.vcxproj  odata_service.vs12.vcxproj
src/: CMakeLists.txt
src/common/: asyncrt_utils.cpp  base64.cpp  json.cpp  json_parsing.cpp  json_serialization.cpp  uri.cpp  uri_builder.cpp  uri_parser.cpp  utility.cpp  xmlhelpers.cpp
src/core/: odata_context_url_builder.cpp  odata_context_url_parser.cpp  odata_entity_model_builder.cpp  odata_entity_value.cpp  odata_json_operation_payload_parameter_writer.cpp  odata_json_operation_url_parameter_writer.cpp  odata_json_reader_full.cpp  odata_json_reader_minimal.cpp  odata_json_writer.cpp  odata_message_reader.cpp  odata_message_writer.cpp  odata_path.cpp  odata_path_segment.cpp  odata_path_segment_visitor.cpp  odata_primitive_value.cpp  odata_property_map.cpp  odata_query_node.cpp  odata_query_node_visitor.cpp  odata_structured_value.cpp  odata_uri.cpp  odata_uri_parser.cpp
src/edm/: edm_entity_container.cpp  edm_model.cpp  edm_model_reader.cpp  edm_model_utility.cpp  edm_model_writer.cpp  edm_schema.cpp  edm_type.cpp
tests/: CMakeLists.txt
tests/e2e_service/: create_handler.cpp  create_handler.h  data_source_task.cpp  data_source_task.h  mongo_action.cpp  mongo_action.h  odata_request_context.cpp  odata_request_context.h  odata_select_expand_clause.h  odata_service_exception.h  odata_test_service.cpp  odata_test_service.h  odata_value_builder.cpp  odata_value_builder.h  query_handler.cpp  query_handler.h  query_node_visitor.cpp  query_node_visitor.h  query_target.cpp  query_target.h
tests/framework/TestRunner/: CMakeLists.txt  test_module_loader.cpp  test_runner.cpp
tests/framework/UnitTestpp/: CMakeLists.txt
tests/framework/utilities/: CMakeLists.txt
tests/functional/: CMakeLists.txt  odata_tests.cpp  odata_tests.h
tests/functional/common_test/: common_nullable_test.cpp  common_utility_test.cpp
tests/functional/core_test/: odata_collection_value_test.cpp  odata_context_url_parser_test.cpp  odata_json_reader_test.cpp  odata_json_writer_test.cpp  odata_uri_parser_test.cpp  odata_value_test.cpp
tests/functional/edm_test/: edm_model_reader_test.cpp  edm_model_utility_test.cpp
tests/service/: odata_select_expand_clause.cpp  odata_test_service.cpp  odata_test_service.h  odata_test_service_metadata.xml  odata_test_service_mongo.cpp
